Minor post changes and fix webkit overflow scrolling

--- a/public/css/wyzt.css
+++ b/public/css/wyzt.css
@@ -38,6 +38,8 @@
 html,
 body {
   overflow-x: hidden;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 html {
